[package]
name = "config-parsing-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
libc = "0.2"
merge = "0.1"
once_cell = "1.7"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
